# homework3

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
src/: decorators.py  generators.py  masks.py  widget.py
src/processing/: processing.py
tests/: conftest.py  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
